--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.21.3",
     "sort-by": "^0.0.2",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
