--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.21.3",
     "sort-by": "^0.0.2",
+    "swiper": "^11.0.5",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
